# playlist_bot

./: .dockerignore  .env.example  .flake8  .gitignore  Makefile  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
app/: __main__.py  entrypoint.py
app/core/: config.py  constants.py  distribution.py  states.py  typdefs.py
app/handlers/: __init__.py  events.py  playlist.py  start.py
app/services/: event_checker.py  events.py  notification.py  playlist.py  review.py  users.py
app/storage/: base.py  base_class.py  base_crud.py  cruds.py  models.py  session.py
app/storage/schemas/: __init__.py  event.py  playlist.py  review.py  user.py
docker/bot/: Dockerfile  entrypoint.sh
